feat: adding extra apis to know when the container doesn't exist
